@@ -1,3 +1,4 @@
+* Validate dictionary items
 * Add (i)like support to domain inversion
 * Use Python 3
 * Improve loading strategy by using views
